# slim

./: README.rst  pyproject.toml  setup.cfg
slim/: file_tools.py
src/slim/: file_tools.py  user.py
