[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slim"
version = "0.0.0"
authors = [
    {name = "Thomas Svensson", email = "thomas@tsvenson.com"},
]
description = "Shazbot Labs Information Management."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["organizer", "console", "library"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/ShazbotLabs/slim"
