[metadata]
name = slim
version = dev
url = https://github.com/ShazbotLabs/slim
author = Thomas Svenson
author_email = thomas@tsvenson.com
license = MIT
description = Shazbot Labs Information Management.
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = slim
